이미지 경로

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                   <li><img src="img/Incheon_01.jpg" alt="전경사진" /></li>
                   <li><img src="img/Incheon_02.jpg" alt="로비사진" /></li>
                   <li><img src="img/Incheon_03.jpg" alt="빈소사진" /></li>
-                  <li><img src="img/Incheon_04.jpg" alt="기타사진" /></li>
+                  <li><img src="img/Incheon_04.JPG" alt="기타사진" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
