--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
                   <li><img src="img/Yeoju_01.jpg" alt="여주 장례식장 이미지 전경" /></li>
                   <li><img src="img/Yeoju_02.jpg" alt="여주 장례식장 이미지 로비" /></li>
                   <li><img src="img/Yeoju_03.jpg" alt="여주 장례식장 이미지 빈소접객실" /></li>
-                  <li><img src="img/Yeoju_04.jpg" alt="여주 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Yeoju_04.JPG" alt="여주 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1172,7 +1172,7 @@
                   <li><img src="img/Cheonan_01.jpg" alt="천안 장례식장 이미지 전경" /></li>
                   <li><img src="img/Cheonan_02.jpg" alt="천안 장례식장 이미지 로비" /></li>
                   <li><img src="img/Cheonan_03.jpg" alt="천안 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Cheonan_04.jpg" alt="천안 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Cheonan_04.JPG" alt="천안 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1247,7 +1247,7 @@
                   <li><img src="img/Changwon_01.jpg" alt="창원 장례식장 이미지 전경" /></li>
                   <li><img src="img/Changwon_02.jpg" alt="창원 장례식장 이미지 로비" /></li>
                   <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Changwon_04.jpg" alt="창원 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Changwon_04.JPG" alt="창원 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1347,7 +1347,7 @@
                   <li><img src="img/yeosu_01.jpg" alt="여수 장례식장 이미지 빈소" /></li>
                   <li><img src="img/yeosu_02.jpg" alt="여수 장례식장 이미지 로비" /></li>
                   <li><img src="img/yeosu_03.jpg" alt="여수 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/yeosu_04.jpg" alt="여수 장례식장 이미지 기타" /></li>
+                  <li><img src="img/yeosu_04.JPG" alt="여수 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
