이미지 변경

--- a/index.html
+++ b/index.html
@@ -1169,10 +1169,10 @@
               </div>
               <div class="item" id="tab-4">
                 <ul>
-                  <li><img src="img/Cheonan_01.jpg" alt="천안 장례식장 이미지 전경" /></li>
+                  <li><img src="img/Cheonan_01.JPG" alt="천안 장례식장 이미지 전경" /></li>
                   <li><img src="img/Cheonan_02.jpg" alt="천안 장례식장 이미지 로비" /></li>
                   <li><img src="img/Cheonan_03.jpg" alt="천안 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Cheonan_04.JPG" alt="천안 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Cheonan_04.jpg" alt="천안 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
