--- a/seoul.html
+++ b/seoul.html
@@ -250,7 +250,7 @@
                 <p>SERVICE</p>
               </div>
               <div class="section_title">
-                <p>전국환경노동조합 임직원을 위한</p>
+                <p>서울교통공사 나눔사무회 임직원을 위한</p>
                 <p>특별한 상조 서비스</p>
               </div>
             </div>
@@ -284,7 +284,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>2명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -373,14 +373,6 @@
                     </li>
                     <li>
                       <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
                         <p>의전용품</p>
                       </div>
                       <div class="table_nomal">
@@ -394,8 +386,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 10만원 지원</p>
-                        <p>-</p>
+                        <p>카네기1호</p>
+                        <p>현금 지원 시 10만원 지원</p>
+                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
@@ -431,7 +424,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -541,8 +534,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
+                        <p>카네기2호</p>
+                        <p>현금 지원 시 20만원 지원</p>
+                        <p>헌화 50송이</p>
                       </div>
                     </li>
                     <li>
@@ -578,7 +572,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>5명 (1인 당 각 8시간)</p>
+                        <p>6명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -688,8 +682,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 30만원 지원</p>
-                        <p>헌화 50송이</p>
+                        <p>카네기3호</p>
+                        <p>현금 지원 시 30만원 지원</p>
+                        <p>헌화 100송이</p>
                       </div>
                     </li>
                     <li>
@@ -732,7 +727,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>2명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -842,8 +837,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 10만원 지원</p>
-                        <p>-</p>
+                        <p>카네기1호</p>
+                        <p>현금 지원 시 10만원 지원</p>
+                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
@@ -882,7 +878,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -992,8 +988,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
+                        <p>카네기2호</p>
+                        <p>현금 지원 시 20만원 지원</p>
+                        <p>헌화 50송이</p>
                       </div>
                     </li>
                     <li>
@@ -1032,7 +1029,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>5명 (1인 당 각 8시간)</p>
+                        <p>6명 (1인 당 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -1142,8 +1139,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 30만원 지원</p>
-                        <p>헌화 50송이</p>
+                        <p>카네기3호</p>
+                        <p>현금 지원 시 30만원 지원</p>
+                        <p>헌화 100송이</p>
                       </div>
                     </li>
                     <li>
