--- a/seoul_metro.html
+++ b/seoul_metro.html
@@ -240,7 +240,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>2명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -342,8 +342,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 10만원 지원</p>
-                        <p>-</p>
+                        <p>카네기1호</p>
+                        <p>현금 지원 시 10만원 지원</p>
+                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
@@ -379,7 +380,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -489,8 +490,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
+                        <p>카네기2호</p>
+                        <p>현금 지원 시 20만원 지원</p>
+                        <p>헌화 50송이</p>
                       </div>
                     </li>
                     <li>
@@ -526,7 +528,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>5명 (1인 당 각 8시간)</p>
+                        <p>6명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -636,8 +638,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 30만원 지원</p>
-                        <p>헌화 50송이</p>
+                        <p>카네기3호</p>
+                        <p>현금 지원 시 30만원 지원</p>
+                        <p>헌화 100송이</p>
                       </div>
                     </li>
                     <li>
@@ -680,7 +683,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>2명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -790,8 +793,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 10만원 지원</p>
-                        <p>-</p>
+                        <p>카네기1호</p>
+                        <p>현금 지원 시 10만원 지원</p>
+                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
@@ -830,7 +834,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>4명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -940,8 +944,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 20만원 지원</p>
-                        <p>헌화 30송이</p>
+                        <p>카네기2호</p>
+                        <p>현금 지원 시 20만원 지원</p>
+                        <p>헌화 50송이</p>
                       </div>
                     </li>
                     <li>
@@ -980,7 +985,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>5명 (1인 당 각 8시간)</p>
+                        <p>6명 (1인 당 10시간)</p>
                       </div>
                     </li>
                     <li>
@@ -1090,8 +1095,9 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 30만원 지원</p>
-                        <p>헌화 50송이</p>
+                        <p>카네기3호</p>
+                        <p>현금 지원 시 30만원 지원</p>
+                        <p>헌화 100송이</p>
                       </div>
                     </li>
                     <li>
