--- a/teo.html
+++ b/teo.html
@@ -47,7 +47,7 @@
                   <div class="t_color">주식회사 테오</div>
                   임직원 전용
                 </span>
-                <p>특별 우대 서비스<br />[시중가 대비 30% 할인]</p>
+                <p>특별 우대 서비스</p>
               </li>
               <li>
                 <span>
@@ -210,7 +210,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 8시간)</p>
                       </div>
                     </li>
                     <li>
@@ -365,7 +365,7 @@
                         <p>의전관리사</p>
                       </div>
                       <div class="table_nomal">
-                        <p>2명 (1인 당 각 8시간)</p>
+                        <p>4명 (1인 당 각 8시간)</p>
                       </div>
                     </li>
                     <li>
@@ -467,8 +467,8 @@
                         <p>꽃장식</p>
                       </div>
                       <div class="table_nomal">
-                        <p>제단 지원금 10만원 지원</p>
-                        <p>-</p>
+                        <p>제단 지원금 20만원 지원</p>
+                        <p>헌화 30송이</p>
                       </div>
                     </li>
                     <li>
