경로 재 수정

--- a/teo.html
+++ b/teo.html
@@ -522,7 +522,7 @@
                   <li><img src="img/Incheon_01.jpg" alt="전경사진" /></li>
                   <li><img src="img/Incheon_02.jpg" alt="로비사진" /></li>
                   <li><img src="img/Incheon_03.jpg" alt="빈소사진" /></li>
-                  <li><img src="img/Incheon_04.jpg" alt="기타사진" /></li>
+                  <li><img src="img/Incheon_04.JPG" alt="기타사진" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -572,7 +572,7 @@
                   <li><img src="img/Yeoju_01.jpg" alt="여주 장례식장 이미지 전경" /></li>
                   <li><img src="img/Yeoju_02.jpg" alt="여주 장례식장 이미지 로비" /></li>
                   <li><img src="img/Yeoju_03.jpg" alt="여주 장례식장 이미지 빈소접객실" /></li>
-                  <li><img src="img/Yeoju_04.jpg" alt="여주 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Yeoju_04.JPG" alt="여주 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -594,7 +594,7 @@
               </div>
               <div class="item" id="tab-4">
                 <ul>
-                  <li><img src="img/Cheonan_01.jpg" alt="천안 장례식장 이미지 전경" /></li>
+                  <li><img src="img/Cheonan_01.JPG" alt="천안 장례식장 이미지 전경" /></li>
                   <li><img src="img/Cheonan_02.jpg" alt="천안 장례식장 이미지 로비" /></li>
                   <li><img src="img/Cheonan_03.jpg" alt="천안 장례식장 이미지 빈소" /></li>
                   <li><img src="img/Cheonan_04.jpg" alt="천안 장례식장 이미지 기타" /></li>
@@ -672,7 +672,7 @@
                   <li><img src="img/Changwon_01.jpg" alt="창원 장례식장 이미지 전경" /></li>
                   <li><img src="img/Changwon_02.jpg" alt="창원 장례식장 이미지 로비" /></li>
                   <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Changwon_04.JPG" alt="창원 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -772,7 +772,7 @@
                   <li><img src="img/yeosu_01.jpg" alt="여수 장례식장 이미지 빈소" /></li>
                   <li><img src="img/yeosu_02.jpg" alt="여수 장례식장 이미지 로비" /></li>
                   <li><img src="img/yeosu_03.jpg" alt="여수 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/yeosu_04.jpg" alt="여수 장례식장 이미지 기타" /></li>
+                  <li><img src="img/yeosu_04.JPG" alt="여수 장례식장 이미지 기타" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
