전 페이지 이미지 경로 변경

--- a/yongin.html
+++ b/yongin.html
@@ -470,7 +470,7 @@
             </div>
             <div class="item" id="tab-6">
               <ul>
-                <li><img src="img/yangsan_01.png" alt="양신 장례식장 이미지 전경" /></li>
+                <li><img src="img/yangsan_01.jpg" alt="양산 장례식장 이미지 전경" /></li>
                 <li><img src="img/yangsan_02.jpg" alt="양산 장례식장 이미지 로비" /></li>
                 <li><img src="img/yangsan_03.jpg" alt="양산 장례식장 이미지 빈소접객실" /></li>
                 <li><img src="img/yangsan_04.jpg" alt="양산 장례식장 이미지 기타" /></li>
@@ -571,7 +571,7 @@
             <div class="item" id="tab-10">
               <ul>
                 <li><img src="img/saecheonnyeon_01.jpg" alt="새천년 장례식장 이미지 전경" /></li>
-                <li><img src="img/saecheonnyeon_02.png" alt="새천년 장례식장 이미지 로비" /></li>
+                <li><img src="img/saecheonnyeon_02.jpg" alt="새천년 장례식장 이미지 로비" /></li>
                 <li><img src="img/saecheonnyeon_03.jpg" alt="새천년 장례식장 이미지 빈소" /></li>
                 <li><img src="img/saecheonnyeon_04.jpg" alt="새천년 장례식장 이미지 기타" /></li>
               </ul>
