--- a/index.html
+++ b/index.html
@@ -1094,10 +1094,18 @@
             <div class="item_list">
               <div class="item" id="tab-1">
                 <ul>
-                  <li><img src="img/Incheon_01.jpg" alt="전경사진" /></li>
-                  <li><img src="img/Incheon_02.jpg" alt="로비사진" /></li>
-                  <li><img src="img/Incheon_03.jpg" alt="빈소사진" /></li>
-                  <li><img src="img/Incheon_04.JPG" alt="기타사진" /></li>
+                  <li>
+                    <img src="img/Incheon_01.jpg" alt="전경사진" loading="lazy" />
+                  </li>
+                  <li>
+                    <img src="img/Incheon_02.jpg" alt="로비사진" loading="lazy" />
+                  </li>
+                  <li>
+                    <img src="img/Incheon_03.jpg" alt="빈소사진" loading="lazy" />
+                  </li>
+                  <li>
+                    <img src="img/Incheon_04.JPG" alt="기타사진" loading="lazy" />
+                  </li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1119,10 +1127,10 @@
               </div>
               <div class="item" id="tab-2">
                 <ul>
-                  <li><img src="img/Uijeongbu_01.jpg" alt="의정부 장례식장 전경" /></li>
-                  <li><img src="img/Uijeongbu_02.jpg" alt="의정부 장례식장 로비" /></li>
-                  <li><img src="img/Uijeongbu_03.jpg" alt="의정부 장례식장 빈소" /></li>
-                  <li><img src="img/Uijeongbu_04.jpg" alt="의정부 장례식장 영결식장" /></li>
+                  <li><img src="img/Uijeongbu_01.jpg" alt="의정부 장례식장 전경" loading="lazy" /></li>
+                  <li><img src="img/Uijeongbu_02.jpg" alt="의정부 장례식장 로비" loading="lazy" /></li>
+                  <li><img src="img/Uijeongbu_03.jpg" alt="의정부 장례식장 빈소" loading="lazy" /></li>
+                  <li><img src="img/Uijeongbu_04.jpg" alt="의정부 장례식장 영결식장" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1144,10 +1152,10 @@
               </div>
               <div class="item" id="tab-3">
                 <ul>
-                  <li><img src="img/Yeoju_01.jpg" alt="여주 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Yeoju_02.jpg" alt="여주 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Yeoju_03.jpg" alt="여주 장례식장 이미지 빈소접객실" /></li>
-                  <li><img src="img/Yeoju_04.JPG" alt="여주 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Yeoju_01.jpg" alt="여주 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Yeoju_02.jpg" alt="여주 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Yeoju_03.jpg" alt="여주 장례식장 이미지 빈소접객실" loading="lazy" /></li>
+                  <li><img src="img/Yeoju_04.JPG" alt="여주 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1169,10 +1177,10 @@
               </div>
               <div class="item" id="tab-4">
                 <ul>
-                  <li><img src="img/Cheonan_01.JPG" alt="천안 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Cheonan_02.jpg" alt="천안 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Cheonan_03.jpg" alt="천안 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Cheonan_04.jpg" alt="천안 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Cheonan_01.JPG" alt="천안 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Cheonan_02.jpg" alt="천안 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Cheonan_03.jpg" alt="천안 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/Cheonan_04.jpg" alt="천안 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1194,15 +1202,15 @@
               </div>
               <div class="item" id="tab-5">
                 <ul>
-                  <li><img src="img/Dongrae_01.jpg" alt="동래 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Dongrae_02.jpg" alt="동래 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Dongrae_03.jpg" alt="동래 장례식장 이미지 빈소접객실" /></li>
-                  <li><img src="img/Dongrae_04.jpg" alt="동래 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Dongrae_01.jpg" alt="동래 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Dongrae_02.jpg" alt="동래 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Dongrae_03.jpg" alt="동래 장례식장 이미지 빈소접객실" loading="lazy" /></li>
+                  <li><img src="img/Dongrae_04.jpg" alt="동래 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
                     <h4>동래봉생병원장례식장</h4>
-                    <p>경남 양산시 물금읍 금오로 20</p>
+                    <p>부산 동래구 충렬대로 348번길 23</p>
                   </span>
                   <a href="tel:051-531-7100">
                     <span class="number_icon">
@@ -1219,10 +1227,10 @@
               </div>
               <div class="item" id="tab-6">
                 <ul>
-                  <li><img src="img/yangsan_01.jpg" alt="양신 장례식장 이미지 전경" /></li>
-                  <li><img src="img/yangsan_02.jpg" alt="양산 장례식장 이미지 로비" /></li>
-                  <li><img src="img/yangsan_03.jpg" alt="양산 장례식장 이미지 빈소접객실" /></li>
-                  <li><img src="img/yangsan_04.jpg" alt="양산 장례식장 이미지 기타" /></li>
+                  <li><img src="img/yangsan_01.jpg" alt="양신 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/yangsan_02.jpg" alt="양산 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/yangsan_03.jpg" alt="양산 장례식장 이미지 빈소접객실" loading="lazy" /></li>
+                  <li><img src="img/yangsan_04.jpg" alt="양산 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1244,10 +1252,10 @@
               </div>
               <div class="item" id="tab-7">
                 <ul>
-                  <li><img src="img/Changwon_01.jpg" alt="창원 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Changwon_02.jpg" alt="창원 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Changwon_04.JPG" alt="창원 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Changwon_01.jpg" alt="창원 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Changwon_02.jpg" alt="창원 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Changwon_03.jpg" alt="창원 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/Changwon_04.JPG" alt="창원 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1269,10 +1277,10 @@
               </div>
               <div class="item" id="tab-8">
                 <ul>
-                  <li><img src="img/Semins_01.jpg" alt="세민에스 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Semins_02.jpg" alt="세민에스 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Semins_03.jpg" alt="세민에스 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Semins_04.jpg" alt="세민에스 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Semins_01.jpg" alt="세민에스 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Semins_02.jpg" alt="세민에스 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Semins_03.jpg" alt="세민에스 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/Semins_04.jpg" alt="세민에스 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1294,10 +1302,10 @@
               </div>
               <div class="item" id="tab-9">
                 <ul>
-                  <li><img src="img/Daedong_01.jpg" alt="대동 장례식장 이미지 전경" /></li>
-                  <li><img src="img/Daedong_02.jpg" alt="대동 장례식장 이미지 로비" /></li>
-                  <li><img src="img/Daedong_03.jpg" alt="대동 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/Daedong_04.jpg" alt="대동 장례식장 이미지 기타" /></li>
+                  <li><img src="img/Daedong_01.jpg" alt="대동 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/Daedong_02.jpg" alt="대동 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/Daedong_03.jpg" alt="대동 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/Daedong_04.jpg" alt="대동 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1319,10 +1327,10 @@
               </div>
               <div class="item" id="tab-10">
                 <ul>
-                  <li><img src="img/saecheonnyeon_01.jpg" alt="새천년 장례식장 이미지 전경" /></li>
-                  <li><img src="img/saecheonnyeon_02.jpg" alt="새천년 장례식장 이미지 로비" /></li>
-                  <li><img src="img/saecheonnyeon_03.jpg" alt="새천년 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/saecheonnyeon_04.jpg" alt="새천년 장례식장 이미지 기타" /></li>
+                  <li><img src="img/saecheonnyeon_01.jpg" alt="새천년 장례식장 이미지 전경" loading="lazy" /></li>
+                  <li><img src="img/saecheonnyeon_02.jpg" alt="새천년 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/saecheonnyeon_03.jpg" alt="새천년 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/saecheonnyeon_04.jpg" alt="새천년 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1344,10 +1352,10 @@
               </div>
               <div class="item" id="tab-11">
                 <ul>
-                  <li><img src="img/yeosu_01.jpg" alt="여수 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/yeosu_02.jpg" alt="여수 장례식장 이미지 로비" /></li>
-                  <li><img src="img/yeosu_03.jpg" alt="여수 장례식장 이미지 빈소" /></li>
-                  <li><img src="img/yeosu_04.JPG" alt="여수 장례식장 이미지 기타" /></li>
+                  <li><img src="img/yeosu_01.jpg" alt="여수 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/yeosu_02.jpg" alt="여수 장례식장 이미지 로비" loading="lazy" /></li>
+                  <li><img src="img/yeosu_03.jpg" alt="여수 장례식장 이미지 빈소" loading="lazy" /></li>
+                  <li><img src="img/yeosu_04.JPG" alt="여수 장례식장 이미지 기타" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1369,10 +1377,10 @@
               </div>
               <div class="item" id="tab-12">
                 <ul>
-                  <li><img src="img/korea_funeral_01.jpg" alt="한국 장례문화원 전경 이미지" /></li>
-                  <li><img src="img/korea_funeral_02.jpg" alt="한국 장례문화원 로비 이미지" /></li>
-                  <li><img src="img/korea_funeral_03.jpg" alt="한국 장례문화원 빈소 이미지" /></li>
-                  <li><img src="img/korea_funeral_04.jpg" alt="한국 장례문화원 기타 이미지" /></li>
+                  <li><img src="img/korea_funeral_01.jpg" alt="한국 장례문화원 전경 이미지" loading="lazy" /></li>
+                  <li><img src="img/korea_funeral_02.jpg" alt="한국 장례문화원 로비 이미지" loading="lazy" /></li>
+                  <li><img src="img/korea_funeral_03.jpg" alt="한국 장례문화원 빈소 이미지" loading="lazy" /></li>
+                  <li><img src="img/korea_funeral_04.jpg" alt="한국 장례문화원 기타 이미지" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
@@ -1394,7 +1402,7 @@
               </div>
               <div class="item" id="tab-13">
                 <ul>
-                  <li><img src="img/bongsaeng_01.jpg" alt="봉생병원장례식장 전경 이미지" /></li>
+                  <li><img src="img/bongsaeng_01.jpg" alt="봉생병원장례식장 전경 이미지" loading="lazy" /></li>
                 </ul>
                 <div class="item_desc">
                   <span>
