--- a/kiwoom.html
+++ b/kiwoom.html
@@ -1415,7 +1415,7 @@
                 <div class="item_desc">
                   <span>
                     <h4>동래봉생병원장례식장</h4>
-                    <p>경남 양산시 물금읍 금오로 20</p>
+                    <p>부산 동래구 충렬대로 348번길 23</p>
                   </span>
                   <a href="tel:051-531-7100">
                     <span class="number_icon">
