페이지 추가 8/12

--- a/Gimhae_culture.html
+++ b/Gimhae_culture.html
@@ -197,7 +197,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>명품수의</p>
+                        <p>일반수의</p>
                       </div>
                     </li>
                     <li>
@@ -233,14 +233,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
@@ -344,7 +336,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>고급대마</p>
+                        <p>명품수의</p>
                       </div>
                     </li>
                     <li>
@@ -380,14 +372,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
@@ -491,7 +475,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>고급대마</p>
+                        <p>명품수의</p>
                       </div>
                     </li>
                     <li>
@@ -527,14 +511,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
@@ -645,7 +621,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>명품수의</p>
+                        <p>일반수의</p>
                       </div>
                     </li>
                     <li>
@@ -681,14 +657,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
@@ -795,7 +763,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>고급대마</p>
+                        <p>명품수의</p>
                       </div>
                     </li>
                     <li>
@@ -831,14 +799,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
@@ -945,7 +905,7 @@
                         <p>수의</p>
                       </div>
                       <div class="table_nomal">
-                        <p>고급대마</p>
+                        <p>명품수의</p>
                       </div>
                     </li>
                     <li>
@@ -981,14 +941,6 @@
                         <p>
                           염지, 보공, 탈지면, 운아, 예단, 종교경, 명정, 결관바(소창),습신, 베게, 배허리띠, 수시포 등
                         </p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="table_bold">
-                        <p>특수염습</p>
-                      </div>
-                      <div class="table_nomal">
-                        <p>장례지도사가 왕실 궁중 대렴을 해드립니다.</p>
                       </div>
                     </li>
                     <li>
