--- a/Gimhae_public.html
+++ b/Gimhae_public.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
-    <title>김해시 도시개발공사 노동조합 전용페이지</title>
+    <title>김해시 공공기관 노동조합 협의회 전용페이지</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -17,7 +17,7 @@
           </span>
           <div class="intro_title">
             <span>
-              <p>김해시 도시개발공사 노동조합을 위한</p>
+              <p>김해시 공공기관 노동조합 협의회을 위한</p>
             </span>
             <div>
               <h1>특별우대</h1>
@@ -44,8 +44,8 @@
             <ul>
               <li>
                 <span>
-                  <div class="t_color">김해시 도시개발공사</div>
-                  노동조합 전용
+                  <div class="t_color">김해시 공공기관 노동조합</div>
+                  협의회 전용
                 </span>
                 <p>특별 우대 서비스<br />[시중가 대비 30% 할인]</p>
               </li>
@@ -114,7 +114,7 @@
                 <p>SERVICE</p>
               </div>
               <div class="section_title">
-                <p>김해시 도시개발공사<br />노동조합을 위한</p>
+                <p>김해시 공공기관<br />노동조합을 위한</p>
                 <p>특별한 상조 서비스</p>
               </div>
             </div>
@@ -1023,7 +1023,7 @@
                 </svg>
               </div>
               <div class="ad_desc">
-                <p>김해시 도시개발공사 노동조합 전용센터</p>
+                <p>김해시 공공기관 노동조합 협의회 전용센터</p>
                 <p>1577-1009</p>
               </div>
             </div>
